unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor1_met_training_objectives__c.field-meta.xml
<CustomField>
    <fullName>Instructor1_met_training_objectives__c</fullName>
    <label>Instructor 1 met training objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>