unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor1_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Instructor1_was_knowledgeable__c</fullName>
    <label>Instructor 1 was knowledgeable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>