unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor_1__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1__c</fullName>
    <label>Instructor 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>