unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor_2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2__c</fullName>
    <label>Instructor 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>