unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor_2_interactive_answ_questions__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_interactive_answ_questions__c</fullName>
    <label>Instructor 2 interactive/ answ questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>