unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor_2_met_training_objectives__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_met_training_objectives__c</fullName>
    <label>Instructor 2 met training objectives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>