unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor_2_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2_was_knowledgeable__c</fullName>
    <label>Instructor 2 was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>