unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Jessica_K_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Jessica_K_Interactive_Addressed_Concerns__c</fullName>
    <label>Jessica K: Interactive&amp; Address Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>