unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Joe_B_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Joe_B_Interactive_Addressed_Concerns__c</fullName>
    <label>Joe B: Interactive &amp; Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>