unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Joe_B_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Joe_B_interesting_practical__c</fullName>
    <label>Joe B:interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>