unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Joe_B_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Joe_B_Presenter_was_knowledgeable__c</fullName>
    <label>Joe B: Presenter was knowledgeable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>