unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Kendall_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Kendall_Interesting_Addressed_Concerns__c</fullName>
    <label>Kendall: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>