unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Kendall_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Kendall_interesting_practical__c</fullName>
    <label>Kendall:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>