unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Lee_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Lee_Interactive_Addressed_Concerns__c</fullName>
    <label>Lee: Interactive/Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>