unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Lee_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Lee_interesting_practical__c</fullName>
    <label>Lee:interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>