unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Lee_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Lee_Met_Training_Objectives__c</fullName>
    <label>Lee: Met Training Objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>