unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <label>Likelihood of Recommendation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>