unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Likelihood_of_Purchasing_NCM_OnDemand__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Purchasing_NCM_OnDemand__c</fullName>
    <label>Likelihood of Purchasing NCM OnDemand</label>
    <type>TextArea</type>
</CustomField>