unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Likelihood_of_Recommendation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Recommendation_Explanation__c</fullName>
    <label>Likelihood of Recommendation Explanation</label>
    <type>TextArea</type>
</CustomField>