unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Likely_to_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_Recommend__c</fullName>
    <description>Net Promoter Score</description>
    <label>Likely to Recommend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>