unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Lycia_Interested_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Lycia_Interested_Addressed_Concerns__c</fullName>
    <label>Lycia: Interested &amp; Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>