unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Lycia_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Lycia_interesting_practical__c</fullName>
    <label>Lycia: interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>