unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Mark_S_Interested_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Mark_S_Interested_Addressed_Concerns__c</fullName>
    <label>Mark S: Interested &amp; Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>