unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Mark_S_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Mark_S_interesting_practical__c</fullName>
    <label>Mark S:interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>