unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Mark_S_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Mark_S_Met_Training_Objectives__c</fullName>
    <label>Mark S: Met Training Objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>