unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Mark_S_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Mark_S_Presenter_was_knowledgeable__c</fullName>
    <label>Mark S: Presenter was knowledgeable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>