unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Materials_were_pertinent_useful__c.field-meta.xml
<CustomField>
    <fullName>Materials_were_pertinent_useful__c</fullName>
    <label>Materials were pertinent &amp; useful</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>