unpackaged/main/default/objects/GetFeedBack_Results__c/fields/moderator__c.field-meta.xml
<CustomField>
    <fullName>moderator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moderator (Group Id)</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipName>moderator</relationshipName>
    <type>Lookup</type>
</CustomField>