unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Moderator_ID__c.field-meta.xml
<CustomField>
    <fullName>Moderator_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Moderator&#39;s contact record.</description>
    <inlineHelpText>The Moderator&#39;s contact record.</inlineHelpText>
    <label>Moderator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>GetFeedBack_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>