unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Name_Customer_Entered_to_be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Name_Customer_Entered_to_be_Contacted__c</fullName>
    <label>Name Customer Entered to be Contacted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>