unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Name_of_Dealership__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Dealership__c</fullName>
    <label>Name of Dealership</label>
    <type>TextArea</type>
</CustomField>