unpackaged/main/default/objects/GetFeedBack_Results__c/fields/NCMI_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NCMI_Contact_Name__c</fullName>
    <label>NCMI Contact Name</label>
    <type>TextArea</type>
</CustomField>