unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Network_of_Auto_Management_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Network_of_Auto_Management_Professionals__c</fullName>
    <label>Network of Auto Management Professionals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>