unpackaged/main/default/objects/GetFeedBack_Results__c/fields/New_Management_Skills__c.field-meta.xml
<CustomField>
    <fullName>New_Management_Skills__c</fullName>
    <label>New Management Skills</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>