unpackaged/main/default/objects/GetFeedBack_Results__c/fields/New_Survey_Additional_Comments_2__c.field-meta.xml
<CustomField>
    <fullName>New_Survey_Additional_Comments_2__c</fullName>
    <label>New Survey - Additional Comments 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>