unpackaged/main/default/objects/GetFeedBack_Results__c/fields/New_Survey_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>New_Survey_Additional_Comments__c</fullName>
    <label>New Survey - Additional Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>