unpackaged/main/default/objects/GetFeedBack_Results__c/fields/NPS_Detractor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Detractor__c</fullName>
    <formula>IF( 
 Would_you_recommend_NCM_Associates__c = &quot;1&quot;, 
 True, 
 False
)</formula>
    <label>NPS Detractor</label>
    <type>Checkbox</type>
</CustomField>