unpackaged/main/default/objects/GetFeedBack_Results__c/fields/NPS_Neutral__c.field-meta.xml
<CustomField>
    <fullName>NPS_Neutral__c</fullName>
    <formula>IF( Would_you_recommend_NCM_Associates__c = &quot;2&quot;, True, False)</formula>
    <label>NPS Neutral</label>
    <type>Checkbox</type>
</CustomField>