unpackaged/main/default/objects/GetFeedBack_Results__c/fields/NPS_Promoter__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter__c</fullName>
    <formula>IF(  
 Would_you_recommend_NCM_Associates__c = &quot;3&quot;, 
 True, 
 False
)</formula>
    <label>NPS Promoter</label>
    <type>Checkbox</type>
</CustomField>