unpackaged/main/default/objects/GetFeedBack_Results__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <formula>VALUE(Would_you_recommend_NCM_Associates__c)</formula>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>