unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Number_of_Courses_Taken_on_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Courses_Taken_on_Test_Drive__c</fullName>
    <label>Number of Courses Taken on Test Drive</label>
    <type>TextArea</type>
</CustomField>