unpackaged/main/default/objects/GetFeedBack_Results__c/fields/On_site_Consult__c.field-meta.xml
<CustomField>
    <fullName>On_site_Consult__c</fullName>
    <label>On-site Consult?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>