unpackaged/main/default/objects/GetFeedBack_Results__c/fields/OnDemand_Contact_Dealership__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Contact_Dealership__c</fullName>
    <label>OnDemand Contact Dealership</label>
    <type>TextArea</type>
</CustomField>