unpackaged/main/default/objects/GetFeedBack_Results__c/fields/OnDemand_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Contact_Email__c</fullName>
    <label>OnDemand Contact Email</label>
    <type>Email</type>
</CustomField>