unpackaged/main/default/objects/GetFeedBack_Results__c/fields/OnDemand_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Contact_Name__c</fullName>
    <label>OnDemand Contact Name</label>
    <type>TextArea</type>
</CustomField>