unpackaged/main/default/objects/GetFeedBack_Results__c/fields/OnDemand_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Contact_Phone__c</fullName>
    <label>OnDemand Contact Phone</label>
    <type>Phone</type>
</CustomField>