unpackaged/main/default/objects/GetFeedBack_Results__c/fields/OnDemand_Like_to_be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Like_to_be_Contacted__c</fullName>
    <label>OnDemand Like to be Contacted</label>
    <type>TextArea</type>
</CustomField>