unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <label>Participant Name</label>
    <type>TextArea</type>
</CustomField>