unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Participation_interaction_encouraged__c.field-meta.xml
<CustomField>
    <fullName>Participation_interaction_encouraged__c</fullName>
    <label>Participation &amp; interaction encouraged</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>