unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Phone_Number_for_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_for_Follow_Up__c</fullName>
    <label>Phone Number for Follow Up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>