unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Please_Contact_Me__c.field-meta.xml
<CustomField>
    <fullName>Please_Contact_Me__c</fullName>
    <label>Please Contact Me</label>
    <length>5</length>
    <type>Text</type>
</CustomField>