unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Please_rate_your_level_of_eng_EXPL__c.field-meta.xml
<CustomField>
    <fullName>Please_rate_your_level_of_eng_EXPL__c</fullName>
    <inlineHelpText>Explanation: Please rate your level of engagement in this group</inlineHelpText>
    <label>Please rate your level of eng EXPL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>