unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Please_rate_your_level_of_engagement__c.field-meta.xml
<CustomField>
    <fullName>Please_rate_your_level_of_engagement__c</fullName>
    <inlineHelpText>Please rate your level of engagement in this group.</inlineHelpText>
    <label>Please rate your level of engagement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>