unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Please_state_testimonial__c.field-meta.xml
<CustomField>
    <fullName>Please_state_testimonial__c</fullName>
    <label>Please state testimonial</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>