unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Pre_meeting_planning_and_execution__c.field-meta.xml
<CustomField>
    <fullName>Pre_meeting_planning_and_execution__c</fullName>
    <inlineHelpText>Pre-meeting planning and execution by the support teams and the moderator were in alignment with the expectations of the group.</inlineHelpText>
    <label>Pre-meeting planning and execution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>