unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Pre_meeting_planning_and_execution_Expl__c.field-meta.xml
<CustomField>
    <fullName>Pre_meeting_planning_and_execution_Expl__c</fullName>
    <inlineHelpText>Explanation: Pre-meeting planning and execution by the support teams and the moderator were in alignment with the expectations of the group.</inlineHelpText>
    <label>Pre-meeting planning and execution Expl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>