unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Presentation_Topic_wanted_not_covered__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Topic_wanted_not_covered__c</fullName>
    <label>Presentation/Topic wanted not covered</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>