unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Primary_area_s_of_concern__c.field-meta.xml
<CustomField>
    <fullName>Primary_area_s_of_concern__c</fullName>
    <label>Primary area(s) of concern</label>
    <type>TextArea</type>
</CustomField>