unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Group</label>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipName>GetFeedBack_Results</relationshipName>
    <type>Lookup</type>
</CustomField>