unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Provide_a_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Provide_a_Testimonial__c</fullName>
    <label>Provide a Testimonial</label>
    <type>TextArea</type>
</CustomField>