unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Randy_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Randy_Interesting_Addressed_Concerns__c</fullName>
    <label>Randy: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>