unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Randy_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Randy_interesting_practical__c</fullName>
    <label>Randy:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>