unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Recommend_NCM_to_Peers_Explanation_del1__c.field-meta.xml
<CustomField>
    <fullName>Recommend_NCM_to_Peers_Explanation_del1__c</fullName>
    <label>20 Group Survey Recommend NCM - Expl</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>