unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Recommend_NCM_to_Peers_NPS__c.field-meta.xml
<CustomField>
    <fullName>Recommend_NCM_to_Peers_NPS__c</fullName>
    <label>20 Group Survey Recommend NCM NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>