unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Reduce_Dealership_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Reduce_Dealership_Expenses__c</fullName>
    <label>Reduce Dealership Expenses</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>