unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>