unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Registration_was_easy_smooth__c.field-meta.xml
<CustomField>
    <fullName>Registration_was_easy_smooth__c</fullName>
    <label>Registration was easy &amp; smooth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>