unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Relevant_Agenda_Topics_Explanation_del1__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Agenda_Topics_Explanation_del1__c</fullName>
    <label>20 Group Survey Relevant Topics Expl</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>