unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Relevant_Agenda_Topics_to_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Agenda_Topics_to_Challenges__c</fullName>
    <label>20 Group Survey Relevant Topics</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>