unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Coach_Facilitation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Retail_Coach_Facilitation_Explanation__c</fullName>
    <label>Retail Coach Facilitation Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>