unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Coach_Preparation_for_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Retail_Coach_Preparation_for_Meeting__c</fullName>
    <label>Retail Coach Preparation for Meeting</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>