unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Account_Number__c</fullName>
    <label>Retail Ops Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>