unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Contact_Me_Name__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Contact_Me_Name__c</fullName>
    <label>Retail Ops - Contact Me Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>