unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Contact_Me_Phone__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Contact_Me_Phone__c</fullName>
    <label>Retail Ops - Contact Me Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>