unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Like_Least_about_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Like_Least_about_Meeting__c</fullName>
    <label>Retail Ops - Like Least about Meeting</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>