unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Please_Contact_Me__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Please_Contact_Me__c</fullName>
    <label>Retail Ops - Please Contact Me</label>
    <length>10</length>
    <type>Text</type>
</CustomField>