unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Testimonial__c</fullName>
    <label>Retail Ops - Testimonial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>