unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Testimonial_Name__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Testimonial_Name__c</fullName>
    <label>Retail Ops - Testimonial Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>