unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Retail_Ops_Testimonial_Title__c.field-meta.xml
<CustomField>
    <fullName>Retail_Ops_Testimonial_Title__c</fullName>
    <label>Retail Ops - Testimonial Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>