unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Robert_N_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Robert_N_interesting_practical__c</fullName>
    <label>Robert N:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>