unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Robin_Interested_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Robin_Interested_Addressed_Concerns__c</fullName>
    <label>Robin: Interested &amp; Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>