unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Robin_Met_training_objectives__c.field-meta.xml
<CustomField>
    <fullName>Robin_Met_training_objectives__c</fullName>
    <label>Robin: Met training objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>