unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Satisfaction_with_set_up_and_pre_work__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_set_up_and_pre_work__c</fullName>
    <label>20 Group Survey Setup &amp; Scheduling</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>